Added fb feed and more translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,6 +2,8 @@
     "title": "DETAILING",
     "book_button": "BOOK AN APPOINTMENT",
     "offers": "Our Offers",
+    "page": "Our Page",
+    "quote": "Discover our new achievements",
     "contact": "Contact",
     "records": [
     {
