--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -2,6 +2,8 @@
     "title": "DETAILING",
     "book_button": "ZAREZERWUJ TERMIN",
     "offers": "Nasze Oferty",
+    "page": "Nasza Strona",
+    "quote": "Odkryj nasze nowę osiągnięcia",
     "contact": "Kontakt",
     "records": [
     {
