Added React Spring Parallax, Slideshow for page

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,7 +3,7 @@
     "book_button": "BOOK AN APPOINTMENT",
     "offers": "Our Offers",
     "page": "Our Page",
-    "quote": "Discover our new achievements",
+    "quote": "Discover our latest achievements",
     "contact": "Contact",
     "records": [
     {
